<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.senai.sp.informatica.calculadora.CalcActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/edt_resu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:keyboardNavigationCluster="false"
        android:ems="10"
        android:hint="0"

        android:textAlignment="textEnd" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bnt_limp"
            android:layout_width="192dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:onClick="limpar"
            android:text="@string/btn_limp" />

        <Button
            android:id="@+id/btn_mais_menos"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_mais_menos" />

        <Button
            android:id="@+id/btn_perc"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_percent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_7"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_div" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/btn_mult"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_multi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_sub" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_0" />

        <Button
            android:id="@+id/btn_virg"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="numeros"
            android:text="@string/btn_virg" />

        <Button
            android:id="@+id/btn_igual"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_igual" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="96dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/btn_soma" />
    </LinearLayout>


</LinearLayout>
